MeshLab Release Note

** Every Time you commit something significant add a few lines here. 
** Be Descriptive please. 


2014 04 08 Corrected Selection Bug. 
Old and low-end graphics cards (like the integrated intel ones) do not support OpenGL selection modes. Re-implemented all the selection using a internal pipeline that is actually faster.

2014 04 18 New MeshLabServer version has been committed
MeshLabServer is now able to properly manage the MeshLab Project files. MeshLabServer has been completely rewritten in order (hopefully) to enhance the robustness and usability of the tool 

2014 04 25 Improved on screen Help. 
Now it reports the trick for quick visibility toggling in the Layer window.

2014 04 28 Corrected Missing Preview Bug
The preview check box disappeared from many filters that were changing just the geometry of the mesh (like all the smoothing filters) without any serious reason.