@@ -8,7 +8,7 @@
  *                                                                    \      *
  * All rights reserved.                                                      *
  *                                                                           *
- * This program is free software; you can redistribute it and/or modify      *   
+ * This program is free software; you can redistribute it and/or modify      *
  * it under the terms of the GNU General Public License as published by      *
  * the Free Software Foundation; either version 2 of the License, or         *
  * (at your option) any later version.                                       *
@@ -89,8 +89,8 @@ SelectionFilterPlugin::SelectionFilterPlugin()
   case FP_SELECT_ERODE :                 return QString("Erode Selection");
   case FP_SELECT_DILATE :		           return QString("Dilate Selection");
   case FP_SELECT_BORDER:                 return QString("Select Border");
-  case FP_SELECT_BY_VERT_QUALITY :		       return QString("Select Faces by Vertex Quality");
-  case FP_SELECT_BY_FACE_QUALITY :		       return QString("Select Faces by Face Quality");
+  case FP_SELECT_BY_VERT_QUALITY :		       return QString("Select by Vertex Quality");
+  case FP_SELECT_BY_FACE_QUALITY :		       return QString("Select by Face Quality");
   case FP_SELECT_BY_RANGE:						 return QString("Select Faces by Coord Range");
   case FP_SELECT_BY_COLOR:						 return QString("Select Faces by Color");
   case CP_SELFINTERSECT_SELECT:      return QString("Select Self Intersecting Faces");
@@ -101,25 +101,25 @@ SelectionFilterPlugin::SelectionFilterPlugin()
   return QString("Unknown filter");
 }
  QString SelectionFilterPlugin::filterInfo(FilterIDType filterId) const
-  {
+ {
    switch(filterId)
    {
-     case FP_SELECT_DILATE : return tr("Dilate (expand) the current set of selected faces");
-     case FP_SELECT_DELETE_VERT : return tr("Delete the current set of selected vertices; faces that share one of the deleted vertexes are deleted too.");
-     case FP_SELECT_DELETE_FACE : return tr("Delete the current set of selected faces, vertices that remains unreferenced are not deleted.");
-     case FP_SELECT_DELETE_FACEVERT : return tr("Delete the current set of selected faces and all the vertices surrounded by that faces.");
+   case FP_SELECT_DILATE : return tr("Dilate (expand) the current set of selected faces");
+   case FP_SELECT_DELETE_VERT : return tr("Delete the current set of selected vertices; faces that share one of the deleted vertexes are deleted too.");
+   case FP_SELECT_DELETE_FACE : return tr("Delete the current set of selected faces, vertices that remains unreferenced are not deleted.");
+   case FP_SELECT_DELETE_FACEVERT : return tr("Delete the current set of selected faces and all the vertices surrounded by that faces.");
    case FP_SELECTBYANGLE :             return QString("Select faces according to the angle between their normal and the view direction. It is used in range map processing to select and delete steep faces parallel to viewdirection");
    case CP_SELFINTERSECT_SELECT:    return tr("Select only self intersecting faces.");
-   case FP_SELECT_FACE_FROM_VERT :		           return QString("Select faces from selected vertices");
-   case FP_SELECT_VERT_FROM_FACE :		           return QString("Select vertices from selected faces");
-     case FP_SELECT_ERODE  : return tr("Erode (reduce) the current set of selected faces");
-     case FP_SELECT_INVERT : return tr("Invert the current set of selected faces");
-     case FP_SELECT_NONE   : return tr("Clear the current set of selected faces");
-     case FP_SELECT_ALL    : return tr("Select all the faces of the current mesh");
-     case FP_SELECT_BORDER    : return tr("Select vertices and faces on the boundary");
-     case FP_SELECT_BY_VERT_QUALITY    : return tr("Select all the faces with all the vertexes within the specified quality range");
-   case FP_SELECT_BY_FACE_QUALITY    : return tr("Select all the faces with within the specified quality range");
-     case FP_SELECT_BY_COLOR:  return tr("Select part of the mesh based on its color.");
+   case FP_SELECT_FACE_FROM_VERT :            return QString("Select faces from selected vertices");
+   case FP_SELECT_VERT_FROM_FACE :            return QString("Select vertices from selected faces");
+   case FP_SELECT_ERODE  : return tr("Erode (reduce) the current set of selected faces");
+   case FP_SELECT_INVERT : return tr("Invert the current set of selected faces");
+   case FP_SELECT_NONE   : return tr("Clear the current set of selected faces");
+   case FP_SELECT_ALL    : return tr("Select all the faces of the current mesh");
+   case FP_SELECT_BORDER    : return tr("Select vertices and faces on the boundary");
+   case FP_SELECT_BY_VERT_QUALITY    : return tr("Select all the faces/vertexes within the specified vertex quality range");
+   case FP_SELECT_BY_FACE_QUALITY    : return tr("Select all the faces/vertexes with within the specified face quality range");
+   case FP_SELECT_BY_COLOR:  return tr("Select part of the mesh based on its color.");
    case CP_SELECT_TEXBORDER :                 return tr("Colorize only border edges.");
    case CP_SELECT_NON_MANIFOLD_FACE:   return tr("Select the faces and the vertices incident on non manifold edges (e.g. edges where more than two faces are incident); note that this function select the components that are related to non manifold edges. The case of non manifold vertices is specifically managed by the pertinent filter.");
    case CP_SELECT_NON_MANIFOLD_VERTEX: return tr("Select the non manifold vertices that do not belong to non manifold edges. For example two cones connected by their apex. Vertices incident on non manifold edges are ignored.");
@@ -128,12 +128,12 @@ SelectionFilterPlugin::SelectionFilterPlugin()
    }
    assert(0);
    return QString();
-  }
+ }
 
 void SelectionFilterPlugin::initParameterSet(QAction *action, MeshModel &m, RichParameterSet &parlst)
 {
-		switch(ID(action))
-		{
+        switch(ID(action))
+        {
     case FP_SELECT_BORDER:
       //parlst.addParam(new RichInt("Iteration", true, "Inclusive Sel.", "If true only the faces with <b>all</b> selected vertices are selected. Otherwise any face with at least one selected vertex will be selected."));
       break;
@@ -179,51 +179,52 @@ void SelectionFilterPlugin::initParameterSet(QAction *action, MeshModel &m, Rich
 
           parlst.addParam(new RichDynamicFloat("minQ", minq*0.75+maxq*.25, minq, maxq,  tr("Min Quality"), tr("Minimum acceptable quality value") ));
           parlst.addParam(new RichDynamicFloat("maxQ", minq*0.25+maxq*.75, minq, maxq,  tr("Max Quality"), tr("Maximum acceptable quality value") ));
+          parlst.addParam(new RichBool("Inclusive", true, "Inclusive Sel.", "If true only the vertices with <b>all</b> the adjacent faces within the specified range are selected. Otherwise any vertex with at least one face within the range is selected."));
         }
         break;
       case FP_SELECT_BY_COLOR:
-			{
-				parlst.addParam(new RichColor("Color",Color4b::Black, tr("Color To Select"), tr("Color that you want to be selected.") ));
-				
-				QStringList colorspace;
-				colorspace << "HSV" << "RGB";
-				parlst.addParam(new RichEnum("ColorSpace", 0, colorspace, tr("Pick Color Space"), tr("The color space that the sliders will manipulate.") ));
+            {
+                parlst.addParam(new RichColor("Color",Color4b::Black, tr("Color To Select"), tr("Color that you want to be selected.") ));
+
+                QStringList colorspace;
+                colorspace << "HSV" << "RGB";
+                parlst.addParam(new RichEnum("ColorSpace", 0, colorspace, tr("Pick Color Space"), tr("The color space that the sliders will manipulate.") ));
 
                 parlst.addParam(new RichBool("Inclusive", true, "Inclusive Sel.", "If true only the faces with <b>all</b> the vertices within the specified range are selected. Otherwise any face with at least one vertex within the range is selected."));
-				
-				parlst.addParam(new RichDynamicFloat("PercentRH", 0.2f, 0.0f, 1.0f,  tr("Variation from Red or Hue"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
-				parlst.addParam(new RichDynamicFloat("PercentGS", 0.2f, 0.0f, 1.0f,  tr("Variation from Green or Saturation"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
-				parlst.addParam(new RichDynamicFloat("PercentBV", 0.2f, 0.0f, 1.0f,  tr("Variation from Blue or Value"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
-			}
-			break;
-			case FP_SELECT_ALL:
-			{
-				 parlst.addParam(new RichBool("allFaces", true, "Select all Faces", "If true the filter will select all the faces."));
-				 parlst.addParam(new RichBool("allVerts", true, "Select all Vertices", "If true the filter will select all the vertices."));
-			}
-			break;
-			case FP_SELECT_NONE:
-			{
-				 parlst.addParam(new RichBool("allFaces", true, "De-select all Faces", "If true the filter will de-select all the faces."));
-				 parlst.addParam(new RichBool("allVerts", true, "De-select all Vertices", "If true the filter will de-select all the vertices."));
-			}
-			break;
-			case FP_SELECT_INVERT:
-			{
-				 parlst.addParam(new RichBool("InvFaces", true, "Invert Faces", "If true the filter will invert the selected faces."));
-				 parlst.addParam(new RichBool("InvVerts", true, "Invert Vertices", "If true the filter will invert the selected vertices."));
-			}
-		}
+
+                parlst.addParam(new RichDynamicFloat("PercentRH", 0.2f, 0.0f, 1.0f,  tr("Variation from Red or Hue"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
+                parlst.addParam(new RichDynamicFloat("PercentGS", 0.2f, 0.0f, 1.0f,  tr("Variation from Green or Saturation"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
+                parlst.addParam(new RichDynamicFloat("PercentBV", 0.2f, 0.0f, 1.0f,  tr("Variation from Blue or Value"), tr("A float between 0 and 1 that represents the percent variation from this color that will be selected.  For example if the R was 200 and you put 0.1 then any color with R 200+-25.5 will be selected.") ));
+            }
+            break;
+            case FP_SELECT_ALL:
+            {
+                 parlst.addParam(new RichBool("allFaces", true, "Select all Faces", "If true the filter will select all the faces."));
+                 parlst.addParam(new RichBool("allVerts", true, "Select all Vertices", "If true the filter will select all the vertices."));
+            }
+            break;
+            case FP_SELECT_NONE:
+            {
+                 parlst.addParam(new RichBool("allFaces", true, "De-select all Faces", "If true the filter will de-select all the faces."));
+                 parlst.addParam(new RichBool("allVerts", true, "De-select all Vertices", "If true the filter will de-select all the vertices."));
+            }
+            break;
+            case FP_SELECT_INVERT:
+            {
+                 parlst.addParam(new RichBool("InvFaces", true, "Invert Faces", "If true the filter will invert the selected faces."));
+                 parlst.addParam(new RichBool("InvVerts", true, "Invert Vertices", "If true the filter will invert the selected vertices."));
+            }
+        }
 }
 
 bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichParameterSet & par, vcg::CallBackPos * /*cb*/)
 {
-	if (md.mm() == NULL)
-		return false;
+    if (md.mm() == NULL)
+        return false;
   MeshModel &m=*(md.mm());
   CMeshO::FaceIterator fi;
-	CMeshO::VertexIterator vi;
-	switch(ID(action))
+    CMeshO::VertexIterator vi;
+    switch(ID(action))
   {
   case FP_SELECT_DELETE_VERT :
       tri::UpdateSelection<CMeshO>::FaceClear(m.cm);
@@ -241,8 +242,8 @@ bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichP
       m.clearDataMask(MeshModel::MM_FACEFACETOPO );
     break;
   case FP_SELECT_DELETE_FACEVERT :
-		tri::UpdateSelection<CMeshO>::VertexClear(m.cm);
-		tri::UpdateSelection<CMeshO>::VertexFromFaceStrict(m.cm);  
+        tri::UpdateSelection<CMeshO>::VertexClear(m.cm);
+        tri::UpdateSelection<CMeshO>::VertexFromFaceStrict(m.cm);
     for(fi=m.cm.face.begin();fi!=m.cm.face.end();++fi)
       if(!(*fi).IsD() && (*fi).IsS() )
                     tri::Allocator<CMeshO>::DeleteFace(m.cm,*fi);
@@ -286,20 +287,20 @@ bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichP
   }
   break;
   case FP_SELECT_ALL    :
-	  if (par.getBool("allVerts"))
-		tri::UpdateSelection<CMeshO>::VertexAll(m.cm);
-	  if (par.getBool("allFaces"))
-	      tri::UpdateSelection<CMeshO>::FaceAll(m.cm);     break;
+      if (par.getBool("allVerts"))
+        tri::UpdateSelection<CMeshO>::VertexAll(m.cm);
+      if (par.getBool("allFaces"))
+          tri::UpdateSelection<CMeshO>::FaceAll(m.cm);     break;
   case FP_SELECT_NONE   :
-	  if (par.getBool("allVerts"))
-		tri::UpdateSelection<CMeshO>::VertexClear(m.cm);
-	  if (par.getBool("allFaces"))
-		tri::UpdateSelection<CMeshO>::FaceClear(m.cm);   break;
+      if (par.getBool("allVerts"))
+        tri::UpdateSelection<CMeshO>::VertexClear(m.cm);
+      if (par.getBool("allFaces"))
+        tri::UpdateSelection<CMeshO>::FaceClear(m.cm);   break;
   case FP_SELECT_INVERT :
-	  if (par.getBool("InvVerts"))
-		tri::UpdateSelection<CMeshO>::VertexInvert(m.cm);
-	  if (par.getBool("InvFaces"))
-		tri::UpdateSelection<CMeshO>::FaceInvert(m.cm);  break;
+      if (par.getBool("InvVerts"))
+        tri::UpdateSelection<CMeshO>::VertexInvert(m.cm);
+      if (par.getBool("InvFaces"))
+        tri::UpdateSelection<CMeshO>::FaceInvert(m.cm);  break;
   case FP_SELECT_VERT_FROM_FACE  :
     if(par.getBool("Inclusive"))
          tri::UpdateSelection<CMeshO>::VertexFromFaceStrict(m.cm);
@@ -314,7 +315,7 @@ bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichP
                           tri::UpdateSelection<CMeshO>::FaceFromVertexStrict(m.cm);
   break;
   case FP_SELECT_DILATE : tri::UpdateSelection<CMeshO>::VertexFromFaceLoose(m.cm);
-                          tri::UpdateSelection<CMeshO>::FaceFromVertexLoose(m.cm); 
+                          tri::UpdateSelection<CMeshO>::FaceFromVertexLoose(m.cm);
   break;
   case FP_SELECT_BORDER:
                           tri::UpdateFlags<CMeshO>::FaceBorderFromNone(m.cm);
@@ -336,55 +337,58 @@ bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichP
     {
       float minQ = par.getDynamicFloat("minQ");
       float maxQ = par.getDynamicFloat("maxQ");
+      bool inclusiveFlag = par.getBool("Inclusive");
       tri::UpdateSelection<CMeshO>::FaceFromQualityRange(m.cm, minQ, maxQ);
+      if(inclusiveFlag) tri::UpdateSelection<CMeshO>::VertexFromFaceStrict(m.cm);
+      else tri::UpdateSelection<CMeshO>::VertexFromFaceLoose(m.cm);
     }
   break;
   case FP_SELECT_BY_COLOR:
-		{
+        {
             int colorSpace = par.getEnum("ColorSpace");
-			QColor targetColor = par.getColor("Color");
-			
-			float red = targetColor.redF();
-			float green = targetColor.greenF();
-			float blue = targetColor.blueF();
-			
-            float hue = targetColor.hue()/360.0f;// Normalized into [0..1) range
-			float saturation = targetColor.saturationF();
-			float value = targetColor.valueF();
+            QColor targetColor = par.getColor("Color");
 
-			//like fuzz factor in photoshop
-			float valueRH = par.getDynamicFloat("PercentRH");
-			float valueGS = par.getDynamicFloat("PercentGS");
-			float valueBV = par.getDynamicFloat("PercentBV");
+            float red = targetColor.redF();
+            float green = targetColor.greenF();
+            float blue = targetColor.blueF();
+
+            float hue = targetColor.hue()/360.0f;// Normalized into [0..1) range
+            float saturation = targetColor.saturationF();
+            float value = targetColor.valueF();
+
+            //like fuzz factor in photoshop
+            float valueRH = par.getDynamicFloat("PercentRH");
+            float valueGS = par.getDynamicFloat("PercentGS");
+            float valueBV = par.getDynamicFloat("PercentBV");
 
             tri::UpdateSelection<CMeshO>::FaceClear(m.cm);
             tri::UpdateSelection<CMeshO>::VertexClear(m.cm);
 
-			//now loop through all the faces
+            //now loop through all the faces
             for(vi = m.cm.vert.begin(); vi != m.cm.vert.end(); ++vi)
-			{
+            {
                 if(!(*vi).IsD())
-				{
+                {
                     Color4f colorv = Color4f::Construct((*vi).C());
-					if(colorSpace == 0){
+                    if(colorSpace == 0){
                         colorv = ColorSpace<float>::RGBtoHSV(colorv);
                         if( fabsf(colorv[0] - hue) <= valueRH &&
                             fabsf(colorv[1] - saturation) <= valueGS &&
                             fabsf(colorv[2] - value) <= valueBV  )
                                    (*vi).SetS();
-					}
+                    }
                     else    {
                     if( fabsf(colorv[0] - red) <= valueRH &&
                         fabsf(colorv[1] - green) <= valueGS &&
                         fabsf(colorv[2] - blue) <= valueBV  )
                                     (*vi).SetS();
-					}					
-				}
-			}
+                    }
+                }
+            }
             if(par.getBool("Inclusive")) tri::UpdateSelection<CMeshO>::FaceFromVertexStrict(m.cm);
                                      else tri::UpdateSelection<CMeshO>::FaceFromVertexLoose(m.cm);
-		}
-		break;
+        }
+        break;
   case CP_SELECT_TEXBORDER:
     tri::UpdateTopology<CMeshO>::FaceFaceFromTexCoord(m.cm);
     tri::UpdateFlags<CMeshO>::FaceBorderFromFF(m.cm);
@@ -421,20 +425,20 @@ bool SelectionFilterPlugin::applyFilter(QAction *action, MeshDocument &md, RichP
 MeshFilterInterface::FilterClass SelectionFilterPlugin::getClass(QAction *action)
 {
   switch(ID(action))
-    {
-    case   CP_SELFINTERSECT_SELECT:
-    case   CP_SELECT_NON_MANIFOLD_VERTEX:
-    case   CP_SELECT_NON_MANIFOLD_FACE:
-          return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Cleaning);;
+  {
+  case   CP_SELFINTERSECT_SELECT:
+  case   CP_SELECT_NON_MANIFOLD_VERTEX:
+  case   CP_SELECT_NON_MANIFOLD_FACE:
+    return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Cleaning);;
 
-      case CP_SELECT_TEXBORDER : return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Texture);
-      case FP_SELECT_BY_COLOR : return FilterClass(MeshFilterInterface::Selection);
-      case FP_SELECT_BY_FACE_QUALITY : return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Quality);
-    case FP_SELECT_BY_VERT_QUALITY : return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Quality);
-    case FP_SELECTBYANGLE :
-        return MeshFilterInterface::FilterClass(MeshFilterInterface::RangeMap + MeshFilterInterface::Selection);
+  case CP_SELECT_TEXBORDER : return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Texture);
+  case FP_SELECT_BY_COLOR : return FilterClass(MeshFilterInterface::Selection);
+  case FP_SELECT_BY_FACE_QUALITY :
+  case FP_SELECT_BY_VERT_QUALITY : return FilterClass(MeshFilterInterface::Selection + MeshFilterInterface::Quality);
+  case FP_SELECTBYANGLE :
+    return MeshFilterInterface::FilterClass(MeshFilterInterface::RangeMap + MeshFilterInterface::Selection);
 
-    }
+  }
   return MeshFilterInterface::Selection;
 }
 
@@ -448,7 +452,7 @@ MeshFilterInterface::FilterClass SelectionFilterPlugin::getClass(QAction *action
   case CP_SELFINTERSECT_SELECT:
               return MeshModel::MM_FACEMARK | MeshModel::MM_FACEFACETOPO | MeshModel::MM_FACECOLOR;
 
-	 default: return 0;
+     default: return 0;
   }
 }
 
@@ -479,17 +483,17 @@ int SelectionFilterPlugin::postCondition(QAction *action) const
 
 int SelectionFilterPlugin::getPreConditions( QAction * action) const
 {
-	switch(ID(action))
-	{
+  switch(ID(action))
+  {
   case   CP_SELECT_NON_MANIFOLD_VERTEX:
   case   CP_SELECT_NON_MANIFOLD_FACE:
   case   CP_SELFINTERSECT_SELECT:
-    case FP_SELECT_BORDER:        return MeshModel::MM_FACENUMBER;
-    case FP_SELECT_BY_COLOR:      return MeshModel::MM_VERTCOLOR;
-    case FP_SELECT_BY_VERT_QUALITY:		return MeshModel::MM_VERTQUALITY;
-  case FP_SELECT_BY_FACE_QUALITY:		return MeshModel::MM_FACEQUALITY;
-    case CP_SELECT_TEXBORDER:     return MeshModel::MM_WEDGTEXCOORD;
-	}
+  case   FP_SELECT_BORDER:           return MeshModel::MM_FACENUMBER;
+  case   FP_SELECT_BY_COLOR:         return MeshModel::MM_VERTCOLOR;
+  case   FP_SELECT_BY_VERT_QUALITY:	 return MeshModel::MM_VERTQUALITY;
+  case   FP_SELECT_BY_FACE_QUALITY:	 return MeshModel::MM_FACEQUALITY;
+  case   CP_SELECT_TEXBORDER:        return MeshModel::MM_WEDGTEXCOORD;
+  }
   return 0;
 }
 MESHLAB_PLUGIN_NAME_EXPORTER(SelectionFilterPlugin)
